# gwenlake-python

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
examples/: catalog.py  chat.py  embedding.py  text_generation.py  transforms.py  upload.py
gwenlake/: __init__.py  api.py  chat.py  client.py  constants.py  data.py  datasets.py  embedding.py  embeddings.py  exceptions.py  files.py  generation.py  hub.py  models.py  prompts.py  reader.py  resource.py  schema.py  schemas.py  textprocessing.py  utils.py  version.py
gwenlake/api/: __init__.py  client.py
gwenlake/chat/: __init__.py  openai.py
gwenlake/chat_models/: __init__.py  openai.py
gwenlake/client/: datasets.py  embeddings.py  files.py  generation.py  main.py  prompts.py  reader.py  resource.py
gwenlake/documents/: __init__.py  reader.py
gwenlake/embeddings/: __init__.py  client.py  langchain.py
gwenlake/hub/: __init__.py  hub_client.py
gwenlake/memory/: __init__.py  chat_memory.py
gwenlake/storage/: __init__.py  search.py  sql.py
gwenlake/wrappers/: __init__.py  langchain.py
src/gwenlake/: __init__.py  api_client.py  chat.py  cli.py  client.py  constants.py  credentials.py  datasets.py  embeddings.py  exceptions.py  files.py  flow.py  models.py  projects.py  statements.py  transforms.py  types.py  version.py
src/gwenlake/api/: chat.py  (+2 more)
tests/: context.py  test_api.py  test_chat json.py  test_chat.py  test_datasets.py  test_embeddings.py  test_files.py  test_models.py  test_prompts.py  test_reader.py  test_text_generation.py
(+24 files in other folders)
