[project]
name = "gwenlake"
version = "0.7.3"
description = "Gwenlake Python Client"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "pyarrow>=14.0",
    "httpx>=0.28.1",
    "pandas>=3.0.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
]

[project.scripts]
gwenlake = "gwenlake.cli:main"

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"
